fix: jenkins security audit patch 1 (#14)